--- a/blog/templates/blog/all_blogs.html
+++ b/blog/templates/blog/all_blogs.html
@@ -1,7 +1,9 @@
 <h1>All blogs here</h1>
 
+<h2>Edgar has written {{blogs.count}} blog{{blogs.count|pluralize}}</h2>
+
 {% for blog in blogs %}
-    <h2>{{blog.title}}</h2>
-    <h3>{{blog.date}}</h3>
-    <p>{{blog.description}}</p>
+    <a href="{% url 'blog:detail' blog.id %}"><h2>{{blog.title}}</h2></a>
+    <h3>{{blog.date|date:'M d Y'|upper}}</h3>
+    <p>{{blog.description|striptags|truncatechars:100}}</p>
 {% endfor %}
