--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -1,5 +1,14 @@
 <h1>This is my home page</h1>
 
+{% load static %}
+
+<a href="{% url 'blog:all_blogs' %}">Blog</a>
+
+<a href="{% static 'portfolio/CV.pdf' %}">Resume</a>
+
+<img src="{% static 'portfolio/IMG_0633.JPG' %}">
+
+
 {% for project in projects %}
 
 <h1> {{ project.title }} </h1>
