--- a/blog/templates/blog/all_blogs.html
+++ b/blog/templates/blog/all_blogs.html
@@ -1,9 +1,21 @@
-<h1>All blogs here</h1>
+{% extends 'portfolio/base.html' %}
 
-<h2>Edgar has written {{blogs.count}} blog{{blogs.count|pluralize}}</h2>
+{% block content %}
+
+<h1 id="blogtitle" class="font-weight-bold text-center">Blog</h1>
+
+<h2 class="text-center mb-5">Edgar has written {{blogs.count}} blog{{blogs.count|pluralize}}</h2>
 
 {% for blog in blogs %}
-    <a href="{% url 'blog:detail' blog.id %}"><h2>{{blog.title}}</h2></a>
-    <h3>{{blog.date|date:'M d Y'|upper}}</h3>
-    <p>{{blog.description|striptags|truncatechars:100}}</p>
+<div class="row justify-content-center my-3">
+  <div class="col-md-10">
+    <a href="{% url 'blog:detail' blog.id %}">
+      <h2>{{ blog.title }}</h2>
+    </a>
+    <h5 class="text-muted">{{ blog.date|date:'M d Y'|upper }}</h5>
+    <h4>{{ blog.description|striptags|truncatechars:100 }}</h4>
+  </div>
+</div>
 {% endfor %}
+
+{% endblock %}
