--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,3 +1,14 @@
-<h1>{{blog.title}}</h1>
-<h2>{{blog.date|date:'F jS Y'}}</h2>
-<p>{{blog.description|safe}}</p>
+  
+{% extends "portfolio/base.html" %}
+
+{% load static %}
+
+{% block content %}
+
+<h1 class="text-center mt-5" id="blogdetailtitle">{{ blog.title }}</h1>
+
+<h5 class="text-center text-muted mb-5">{{ blog.date|date:'F jS Y' }}</h5>
+
+{{ blog.description|safe }}
+
+{% endblock %}
