--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -1,24 +1,41 @@
-<h1>This is my home page</h1>
+{% extends 'portfolio/base.html' %}
+
+{% block content %}
 
 {% load static %}
 
-<a href="{% url 'blog:all_blogs' %}">Blog</a>
-
-<a href="{% static 'portfolio/CV.pdf' %}">Resume</a>
-
-<img src="{% static 'portfolio/IMG_0633.JPG' %}">
-
-
-{% for project in projects %}
-
-<h1> {{ project.title }} </h1>
-<p> {{ project.description }} </p>
-<div>
-    <img src="{{project.image.url}}" height=250 width=150/>
+<div class="row justify-content-center my-3">
+    <div class="col-5">
+        <img src="{% static 'portfolio/NY.JPG' %}" class="img-fluid">
+    </div>
 </div>
-{% if project.url %}
-    <a href="{{project.url}}">Link</a>
-{% endif %}
+
+<div class="row justify-content-center mb-3">
+    <div class="col-md-9 text-center">
+      <h1 id="hometext" class="font-weight-bold">Edgar Mendoza Computer Science Engineer from Mexico!</h1>
+    </div>
+</div>
 
 
-{% endfor %}
+  <h2 class="mt-5">Portfolio</h2>
+  <hr>
+  <div class="row">
+    {% for project in projects %}
+    <div class="col-lg-4 col-md-6">
+  
+      {% if project.url %}
+        <a href="{% url 'project' project.id %}">
+          <img src="{{ project.image.url }}" class="img-fluid mb-2">
+        </a>
+      {% else %}
+      
+        <img src="{{ project.image.url }}" class="img-fluid mb-2">
+      {% endif %}
+      <h3>{{ project.title }}</h3>
+      <p>{{ project.description }}</p>
+  
+    </div>
+    {% endfor %}
+  </div>
+
+{% endblock %}
