--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -4,6 +4,8 @@
 
 {% load static %}
 
+<p>Welcome back {{ user.first_name}}. Last login was: <strong>{{user.last_login}}</strong></p>
+
 <div class="row justify-content-center my-3">
     <div class="col-5">
         <img src="{% static 'portfolio/NY.JPG' %}" class="img-fluid">
