--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -4,7 +4,7 @@
 
 {% load static %}
 
-<p>Welcome back {{ user.first_name}}. Last login was: <strong>{{user.last_login}}</strong></p>
+<p>Welcome back <strong>{{ user.first_name}}!</strong></p>
 
 <div class="row justify-content-center my-3">
     <div class="col-5">
