--- a/portfolio/templates/portfolio/login.html
+++ b/portfolio/templates/portfolio/login.html
@@ -19,8 +19,13 @@
                     <button type="submit" class="btn btn-primary">Submit</button>
                   </form>
             </div>
+            {%if message %}
+              <div class = "row justify-content-center">
+                <p class="text-danger"> <strong>{{message}}</strong></p>
+              </div>
+            {% endif %}
             <div class="row justify-content-center">
-              <a href="">Sign up</a>&nbsp&nbsp<a href="">Forgot your password</a>
+              <a href="{% url 'signup' %}">Sign up</a>&nbsp&nbsp<a href="">Forgot your password</a>
             </div>
         </div>
     </body>
