--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -37,6 +37,9 @@
               <li>
                 <a role="button" href="{% url 'blog:all_blogs' %}" class="btn btn-primary">Blog</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}" >Logout</a>
+              </li>
             </ul>
           </div>
         </div>
