--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -4,7 +4,7 @@
 
 {% load static %}
 
-<p>Welcome back <strong>{{ user.first_name}}!</strong></p>
+<p>Welcome back <strong>{{ request.session.name}}</strong> Num of visits: {{request.session.visits}} </p>
 
 <div class="row justify-content-center my-3">
     <div class="col-5">
